--- a/sites/handbook/source/handbook/engineering/quality/engineering-productivity/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/engineering-productivity/index.html.md.erb
@@ -147,6 +147,7 @@ The Engineering Productivity team uses [modified prioritization and planning gui
 1. [GitLab Styles] for shared [RuboCop cops](https://docs.gitlab.com/ee/development/contributing/style_guides.html#ruby-rails-rspec).
 1. [GitLab Development Kit (GDK)] continued development.
 1. [GitLab feature flag alert] for reporting on GitLab feature flags.
+1. [GitLab RSpec Profiling Statistics] for profiling information on RSpec tests in CI.
 
 ## Active Quarter OKRs
 
@@ -242,3 +243,4 @@ This is a list of Engineering Productivity experiments where we identify an oppo
 [GitLab Dangerfiles]: https://gitlab.com/gitlab-org/ruby/gems/gitlab-dangerfiles
 [GitLab Styles]: https://gitlab.com/gitlab-org/ruby/gems/gitlab-styles
 [GitLab feature flag alert]: https://gitlab.com/gitlab-org/gitlab-feature-flag-alert
+[Gitlab RSpec Profiling Statistics]: https://gitlab.com/gitlab-org/rspec_profiling_stats
