Move DB and StableCounterpart squad descriptions under stable counterparts.

--- a/sites/handbook/source/handbook/engineering/infrastructure/team/reliability/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/team/reliability/index.html.md.erb
@@ -63,6 +63,7 @@ We maintain a single source of truth epic for all work underway for the Reliabil
  * Provide long term improvements to observability services.
  * Services: Prometheus, Thanos, Grafana, [Logging](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/logging) 
  * Examples:
+
  	 * [Prometheus Service Issues
 ](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3APrometheus)
    * [Thanos Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Service%3A%3AThanos&first_page_size=100)
@@ -77,13 +78,22 @@ We maintain a single source of truth epic for all work underway for the Reliabil
    	* [OS Upgrades](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/15029)
    	* [Security Patching](https://gitlab.com/gitlab-com/gl-infra/production/-/issues/6605)
    	* [General Requests from the backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/592) that DO NOT require a dedicated project squad.
+     
+##### Database Reliability Squad
+This squad is comprised of DBREs and one or two SREs to support their learning to implement DB related infra changes.
 
-##### Standing Squad Membership Duration
+ * Build, maintain, and improve database services.
+
+##### Stable Counterparts
+
+The Reliability Team works together with [Stage Groups](https://about.gitlab.com/handbook/product/categories/) to create Stable Counterparts.  See the dedicated [Stable Counterparts handbook page](https://about.gitlab.com/handbook/engineering/infrastructure/team/stable-counterpart.html) for more details on this process.
+
+#### Standing Squad Membership Duration
   * Minimum of 2 quarters 
   * Recommended maximum of 4 quarters
   * The Squad Membership SSOT is here: https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/squads.html
 
-##### Standing Squad Roles
+#### Standing Squad Roles
 1. Squad DRI
   * Organize communication between squad members
   * Prioritize incoming work and identify new opportunities for the squad
@@ -94,17 +104,6 @@ We maintain a single source of truth epic for all work underway for the Reliabil
   * Spend two quarters shadowing the DRI in preparation for becoming DRI.
   * Provide squad leadership support when Squad DRI is OOO or On-Call.
    	
-#### Permanent Teams
-These squads maintain members permanently and filled based on expertise.  Permanent squad members do not rotate to any other squads or participate in the SRE On-Call schedules
-
-##### Database Reliability Squad
-Database Reliability Engineers (DBREs) are focused .
-
- * Build, maintain, and improve database services.
-
-##### Stable Counterparts
-
-The Reliability Team works together with [Stage Groups](https://about.gitlab.com/handbook/product/categories/) to create Stable Counterparts.  See the dedicated [Stable Counterparts handbook page](https://about.gitlab.com/handbook/engineering/infrastructure/team/stable-counterpart.html) for more details on this process.
 
 ### How We Work -- General Workflow
 
