Create async update template for release group

--- a/sites/handbook/source/handbook/engineering/development/ops/release/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/release/index.html.md.erb
@@ -164,6 +164,19 @@ The status comment should include what percentage complete the work is, the conf
 A couple of suggestions to consider when adding your async updates:
 * It may be good to include whether this is a front end or back end update if there are multiple people working on it
 * Adding technical notes as you work through an issue is a great way to create an opening for others to engage and collaborate.
+
+Template:
+
+```
+Complete:
+
+Confidence:
+
+Notes:
+
+Concern:
+```
+
 Examples:
 ```
 Complete: 80%
@@ -177,6 +190,7 @@ MR statuses:
 !11111 - 80% complete, 99% confident - docs update - need to add one more section
 !21212 - 10% complete, 70% confident - api update - database migrations created, working on creating the rest of the functionality next
 ```
+
 
 #### Weekly Status Update
 The **Weekly Status Update** is configured to run at noon on Fridays, and contains three questions:
