--- a/sites/uncategorized/source/blog/blog-posts/2022-11-09-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-09-how-we-boosted-webauthn-adoption-from-20-percent-to-93-percent-in-2-days.html.md.erb
@@ -4,8 +4,7 @@ author: Eric Rubin
 author_gitlab: ericrubin
 categories: security
 tags: security, compliance, inside GitLab
-description: With phishing campaigns on the rise across the industry, we had to
-  quickly elevate our security posture even higher. This is what we did.
+description: With phishing campaigns on the rise across the industry, we accelerated rollout of a program to further enhance our security hygiene program. This is how we did it.
 image_title: '/images/blogimages/webauthn.jpg'
 twitter_text: When phishing campaigns increased across the industry, we accelerated our already-in-the-works plans to further enhance our security hygiene program. Here is how we raised WebAuthn adoption from 20% of our workforce to over 90% in just two days.
 featured: yes
