Normalizing Heading Capitalisation on Growth Handbook Pages

--- a/sites/handbook/source/handbook/engineering/development/growth/acquisition/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/acquisition/index.html.md.erb
@@ -32,7 +32,7 @@ The following people are permanent members of the Growth:Acquisition team:
 
 <%= direct_team(manager_role: 'Fullstack Engineering Manager, Growth:Acquisition and Activation', role_regexp: /(Acquisition)/) %>
 
-### Stable counterparts
+### Stable Counterparts
 
 We work directly with the following team members in the Growth:Acquisition group:
 
@@ -44,7 +44,7 @@ roles_regexp = /[,&] (Growth(?!:)|Growth:Acquisition)/
 stable_counterparts(role_regexp: roles_regexp, direct_manager_role: direct_managers_role, other_manager_roles: other_manager_roles)
 %>
 
-## How we work
+## How We Work
 
 * We're data savvy
 * In accordance with our [GitLab values]
