--- a/sites/handbook/source/handbook/engineering/development/growth/activation/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/activation/index.html.md.erb
@@ -31,7 +31,7 @@ The following people are permanent members of the Growth:Activation team:
 
 <%= direct_team(manager_role: 'Fullstack Engineering Manager, Growth:Acquisition and Activation', role_regexp: /(Activation)/) %>
 
-### Stable counterparts
+### Stable Counterparts
 
 We work directly with the following team members in the Growth:Activation group:
 
@@ -43,7 +43,7 @@ roles_regexp = /[,&] (Growth(?!:)|Growth:Activation)/
 stable_counterparts(role_regexp: roles_regexp, direct_manager_role: direct_managers_role, other_manager_roles: other_manager_roles)
 %>
 
-## How we work
+## How We Work
 
 * We're data savvy
 * In accordance with our [GitLab values]
