--- a/sites/uncategorized/source/blog/blog-posts/2022-11-01-how-to-automate-testing-for-a-react-application-with-gitlab.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-01-how-to-automate-testing-for-a-react-application-with-gitlab.html.md.erb
@@ -112,7 +112,7 @@ Exit the jest test watcher by pressing `CTRL` + `c` in your terminal.
 
 To view the unit test report, GitLab requires the runner to upload a JUnit report format XML file.
 We will use `jest-junit` to generate this file. This is a unit test report for jest and will create an XML
-file in the right forward.
+file in the right format.
 
 To install `jest-junit`, run the following command in your terminal:
 
