Update Engineering Analytics Handbook page: refresh of mission, vision, areas of focus for team

--- a/sites/handbook/source/handbook/engineering/quality/engineering-analytics/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/engineering-analytics/index.html.md.erb
@@ -17,35 +17,34 @@ description: "Engineering Analytics Team"
 
 ## Mission
 
-The goal of the team is to build and improve on the data capabilities needed to support a highly productive Engineering Division at GitLab. This team leverages our data analytics staffing and applies their efforts to the highest needs of Engineering.
+The goal of the Engineering Analytics team is to build and improve on the data capabilities needed to support a highly productive Engineering Division at GitLab. This team leverages its data analytics expertise and applies that expertise to advancing the most important priorities of Engineering.
 
 ## Vision
 
-The engineering analytics team will enhance the metric capababilities of the engineering department by focusing on end user needs, cross-department collaboration, and industry best practices. 
+The Engineering Analytics team will enhance the Engineering Division by building and evolving operational analytics capabilities so that Engineering can better understand its own internal needs for its end-users, improve cross-department collaboration, and continue to institute industry best practices. 
 
-Some things we will focus on include:
-* Work with stable counterparts to provide actionable insights to yield better business outcomes
-* Provide efficient data analytics and dashboarding capabilities on top of GitLab’s Data team warehouse infrastructure.
-* Collaborating across departments to find common themes and find the best ways to represent similar metrics
-* Propose new data and measurements to provide additional clarity to existing measurements.
-* Analyze trends and propose strategic improvements to Engineering Leaders.
-* Own creation, optimization and maintenance of the Engineering Division's and its departments' KPIs and PIs.
-* Drive the creation, standardization, and implementation of all Engineering performance indicators.
+Areas of focus and core competencies for Engineering Analytics include:
+* Work with stable counterparts across Engineering to provide actionable insights which ultimately lead to better business outcomes led by Engineering.
+* Provide efficient data analytics and dashboarding capabilities for Engineering leadership, built on top of GitLab’s Data Team's data infrastructure.
+* Collaborate across Engineering departments to find common themes in KPIs and other metrics, and determine the best ways to represent metrics with these shared or common themes.
+* Create new metrics, data analyses, and data visualizations to provide additional clarity for existing operational metrics for Engineering.
+* Propose strategic improvements to Engineering leadership by analyzing trends and behavior in Engineering's KPIs and metrics.
+* Own creation, implementation, optimization, and standardization of the KPIs and metrics for the Engineering Division and its departments.
 
 ## Strategy
 
-Our plan to enable Engineering excellence in analytics is to:
-* Focus on providing metrics that show a story that the users can act upon
-* Narrow performance indicators to focus on most important metrics that track towards major themes of each department
-* Support more efficient department key reviews with handbook driven performance indicators 
-* Support stable counterpart departments with more granular & specific analysis that track towards day to day performance of the department towards its overall mission
+The plan to enable engineering excellence by leveraging analytics is to:
+* Focus on providing metrics that show a story to Engineering leadership that is actionable
+* Narrow performance indicators to focus on the most important metrics that align with the major themes of each Engineering department
+* Support more efficient Key Reviews for each department with KPIs and metrics in the Handbook
+* Support Engineering departments via stable counterparts by providing more bespoke, granular analysis of day-to-day performance of each department towards its overall mission
+* Consult with Engineering leaders on a regular, frequent basis to understand the strategic objectives for each department, and how Engineering Analytics can help to guide each department towards those strategic objectives
 
-## Team Responsibilities
-The team works on the following items ordered by usual importance
-* Support stable counterpart department with KPI/PI & other analysis
-* Enable effective Engineering Department Key Reviews
-* Support wider Eng Department with analysis & new metric requests
-* Improve our handbook pages iteratively, ensure that it’s up to date
+## Internal Team Responsibilities
+In addition to the areas of focus and core competencies listed above, the Engineering Analytics team is continually improving and evolving, in order to keep up with the improvement and evolution of Engineering at GitLab. Areas of focus for the evolution of the team include:
+* Collaborate regularly and frequently with Engineering teams in order to understand how various teams' work aligns with the key objectives for each Department
+* Improve our internal team processes so that the Engineering Analytics team can scale along with the rest of Engineering
+* Improve documentation of our team's processes and the outcomes we drive in the Handbook
 
 ## OKRs
 
@@ -61,7 +60,7 @@ Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/
 
 ## Team Structure
 
-This new team will be a new function under the Quality Department operating as a team of Engineering Analysts, led by an Engineering Manager reporting to the Quality Department Leader.
+This new team will be a new function under the Quality Department operating as a team of Engineering Analysts, led by a leader of Engineering Analytics, who in turn reports to the leader of the Quality Department.
 
 ```mermaid
 graph TD
@@ -70,6 +69,7 @@ graph TD
     B --> BA[Engineering Analyst]
     B --> BB[Engineering Analyst]
     B --> BC[Engineering Analyst]
+    B --> BD[Engineering Analyst]
     A --> C[Contributor Success team]
     A --> D(Quality Engineering)
     A --> E[Engineering Productivity Team]
