Anti-abuse: Update refinement and iteration areas

--- a/sites/handbook/source/handbook/engineering/development/data-science/anti-abuse/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/data-science/anti-abuse/index.html.md.erb
@@ -64,11 +64,15 @@ We use a team specific [issue board](https://gitlab.com/groups/gitlab-org/-/boar
 
 ### Iteration
 
+When planning how to construct our [MVC](https://about.gitlab.com/handbook/values/#minimal-viable-change-mvc), we need to be aware of the [tradeoffs of slicing MR’s vertically vs horizontally](https://about.gitlab.com/handbook/engineering/workflow/iteration/#tradeoffs-between-horizontal-and-vertical-slicing). Reducing scope for each iteration is encouraged.
+
+As requirements can shift, and complexity can increase when uncovering challenging areas in the codebase, we strive to keep issue requirements updated for clarity.
+
 We follow the [iteration process](/handbook/engineering/development/principles/#iteration) outlined by the Engineering function.
 
 ### Refinement
 
-Refinement is the responsibility of every team member. While planning out an epic or a feature we break it down into small consumable chunks. This process is challenging, and takes time. This is why we've set a [weekly refinement meeting](#team-meetings).
+Refinement is the responsibility of every team member. While planning out an epic or a feature we break it down into small consumable [MVC’s](https://about.gitlab.com/handbook/values/#minimal-viable-change-mvc). This process is challenging, and takes time. This is why we've set a [weekly refinement meeting](#team-meetings).
 
 ### Milestone Planning and Timeline
 
