--- a/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
@@ -2886,9 +2886,9 @@ Calibration and assessment are two different steps in the process. The assessmen
 
 For Product specifically, we will calibrate:
 
-1. Anyone in [Boxes 1 or 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
-1. Anyone assessed as `Exceeding` for Performance or Growth Potential
-1. Anyone hired in the last 3 months assessed as `Performing` or `Exceeding` for Performance aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility)
+1. Anyone in [Box 1](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). We will not calibrate team members promoted with 2022-11-01 effective dates that are in Box 1. The rationale here is that we already spent sync time in Q3 calibrating these team members to ensure promotion readiness. 
+1. Anyone in [Box 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). When calibrating Box 9, we will only discuss team members who have been with GitLab for 3+ months, as it is expected that new hires (particularly if hired within 0-3 months - on/after 2022-07-31) would fall in this box. 
+1. Anyone hired in the last 3 months (on/after 2022-07-31) assessed as “Performing” or “Exceeding” for Performance or “Growing” or “Exceeding” for Growth Potential aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility)
 1. Anyone identified as Key Talent
 
 It's important to note that while these will be our focus areas for calibration sessions, leaders should feel free to raise any team member's assessment up for discussions if they have any questions or concerns. Calibrating outliers is not a limitation, but rather a structural adjustment to ensure this process is scalable and focused. 
