Updates the regex for the foundations team list

--- a/sites/handbook/source/handbook/engineering/development/dev/manage/foundations/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/foundations/index.html.md.erb
@@ -29,7 +29,7 @@ The Foundations team is currently growing and taking shape.
 
 ## Team Members
 
-<%= shared_team_members(role_regexps: [/Group Manager.+Ecosystem/, /Manager.+Foundations/, /Designer.+Foundations/, /Engineer.+Foundations/]) %>
+<%= shared_team_members(role_regexps: [/Manager,.+Foundations/, /Designer,.+Foundations/, /Engineer,.+Foundations/]) %>
 
 We're hiring for these roles:
 
