Update argocd blog post to highlight availability and remove note

--- a/sites/uncategorized/source/blog/blog-posts/2022-08-02-how-to-provision-reviewops.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-08-02-how-to-provision-reviewops.html.md.erb
@@ -88,11 +88,9 @@ The following tools are required for running this tutorial. Please install and/o
 - **Tools**
   - GitLab v15.0+ 
   - Kubernetes cluster v1.21+
-  - Argo CD 
+  - Argo CD 2.5.0+
 - **CLI**
   - kubectl v1.21+
-
-**Note:** At the time we are writing this blogpost, the Pull Request generator for GitLab feature is not a part of the latest version of Argo CD (v2.4.7). So you need to install Argo CD from the master branch for the moment. We will remove this note when the Pull Request generator for GitLab will be officially released
 
 ### Explore the Source Code
 
